# cnc-five-axis-interpolation

./: .gitignore  404.html  LICENSE  README.md  __init__.py  algorithm.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
core/: __init__.py  bspline.py  kinematics.py  orientation_spline.py  position_spline.py
datasets/: __init__.py  ijms2021.py  jcde2022.py
docs/: README.md
docs/theory/: ac_kinematics.md  arc_length_parameterization.md  bezier_reparameterization.md  bspline_interpolation.md  feed_correction_polynomial.md  spherical_orientation.md
javascripts/: mathjax.js
notebooks/01_position_spline/: 01_position_spline.ipynb  index.html
notebooks/02_orientation_spline/: 02_orientation_spline.ipynb  index.html
notebooks/03_inverse_kinematics/: 03_inverse_kinematics.ipynb  index.html
notebooks/04_end_to_end_example/: 04_end_to_end_example.ipynb  index.html
search/: search_index.json
tests/: __init__.py  test_datasets.py  test_five_axis_path.py  test_kinematics.py  test_orientation_spline.py  test_position_spline.py  test_utils.py
theory/ac_kinematics/: index.html
theory/arc_length_parameterization/: index.html
theory/bezier_reparameterization/: index.html
theory/bspline_interpolation/: index.html
theory/feed_correction_polynomial/: index.html
theory/spherical_orientation/: index.html
utils/: __init__.py  geometry.py  integrals.py
